@@ -57,7 +57,7 @@ our $FATAL_PAGE = '';
 
 our @MEMCACHED_SERVERS;
 our $RATE_LIMIT_THRESHOLD;
-our $RATE_LIMIT_INTERVAL;
+our $RATE_LIMIT_INTERVAL = 5 * 60;
 
 our $EXPIRING_PW_SERVER;
 our $EXPIRING_PW_WARNING;
